# SegSmooth

./: .gitignore  CMakeLists.txt  Polyhedron.cpp  Polyhedron.h  SegSmooth.cpp  SegSmooth.h  main.cpp
